# ai-scientist

./: .env.example  .gitignore  README.md  pyproject.toml
archive/designs/ideation/: mix_and_match_strategy_design.md
docs/designs/ideation/: mix_and_match_design.md
ideation/: README.md  mix_and_match_strategy.py
ideation/cache/: 2506.01347.json  2506.03637.json  2506.04108.json  2506.04168.json  2506.04178.json  2506.04210.json  2506.04374.json  2506.04761.json  2506.04788.json  2506.05109.json  2506.05284.json  2506.05334.json  2506.05344.json  2506.05350.json  2506.05573.json  2506.05639.json  2506.05901.json  2506.05984.json  2506.06122.json  2506.06276.json
ideation/ideas/: 20250609_132037_pair01_2506.05901_2506.05639.md  20250609_132037_pair02_2506.03637_2506.05334.md  20250609_132037_pair03_2506.05901_2506.05984.md  20250609_132037_pair04_2506.04168_2506.05284.md  20250609_132037_pair05_2506.05901_2506.06276.md  20250609_132037_pair06_2506.05334_2506.04788.md  idea_pair_01_2506.05344_2506.05109.md  ideas.csv
utils/: README.md  alphaxiv.py  arxiv.py  llm.py  pdf_extraction.py  query_ideas.py  semantic_scholar.py
